// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressIndicator renders ProgressIndicator correctly 1`] = `
<div
  className=
      ms-ProgressIndicator
      {
        font-weight: 400;
      }
>
  <div
    className=
        ms-ProgressIndicator-itemName
        {
          color: #333333;
          font-size: 14px;
          line-height: 20px;
          overflow: hidden;
          padding-top: 4px;
          text-overflow: ellipsis;
          white-space: nowrap;
        }
  >
    
  </div>
  <div
    className=
        ms-ProgressIndicator-itemProgress
        {
          height: 2px;
          overflow: hidden;
          padding-bottom: 8px;
          padding-left: 0;
          padding-right: 0;
          padding-top: 8px;
          position: relative;
        }
  >
    <div
      className=
          ms-ProgressIndicator-progressTrack
          {
            background-color: #eaeaea;
            height: 2px;
            position: absolute;
            width: 100%;
          }
          @media screen and (-ms-high-contrast: active){& {
            border-bottom: 1px solid WindowText;
          }
    />
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={75}
      aria-valuetext={undefined}
      className=
          ms-ProgressIndicator-progressBar
          {
            background-color: #0078d4;
            height: 2px;
            position: absolute;
            transition: width .15s linear;
            width: 0px;
          }
          @media screen and (-ms-high-contrast: active){& {
            background-color: WindowText;
          }
      role="progressbar"
      style={
        Object {
          "transition": undefined,
          "width": "75%",
        }
      }
    />
  </div>
  <div
    className=
        ms-ProgressIndicator-itemDescription
        {
          color: #666666;
          font-size: 11px;
          line-height: 18px;
        }
  >
    
  </div>
</div>
`;

exports[`ProgressIndicator renders indeterminate ProgressIndicator correctly 1`] = `
<div
  className=
      ms-ProgressIndicator
      {
        font-weight: 400;
      }
>
  <div
    className=
        ms-ProgressIndicator-itemName
        {
          color: #333333;
          font-size: 14px;
          line-height: 20px;
          overflow: hidden;
          padding-top: 4px;
          text-overflow: ellipsis;
          white-space: nowrap;
        }
  >
    
  </div>
  <div
    className=
        ms-ProgressIndicator-itemProgress
        {
          height: 2px;
          overflow: hidden;
          padding-bottom: 8px;
          padding-left: 0;
          padding-right: 0;
          padding-top: 8px;
          position: relative;
        }
  >
    <div
      className=
          ms-ProgressIndicator-progressTrack
          {
            background-color: #eaeaea;
            height: 2px;
            position: absolute;
            width: 100%;
          }
          @media screen and (-ms-high-contrast: active){& {
            border-bottom: 1px solid WindowText;
          }
    />
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={NaN}
      aria-valuetext={undefined}
      className=
          ms-ProgressIndicator-progressBar
          {
            animation: keyframes 0%{left:-30%;}100%{left:100%;} 3s infinite;
            background-color: #0078d4;
            background: linear-gradient(to right, transparent 0%, #0078d4 50%, transparent 100%);
            height: 2px;
            min-width: 33%;
            position: absolute;
            transition: width .3s ease;
            width: 0px;
          }
          @media screen and (-ms-high-contrast: active){& {
            background-color: WindowText;
          }
      role="progressbar"
      style={
        Object {
          "transition": undefined,
          "width": undefined,
        }
      }
    />
  </div>
  <div
    className=
        ms-ProgressIndicator-itemDescription
        {
          color: #666666;
          font-size: 11px;
          line-height: 18px;
        }
  >
    
  </div>
</div>
`;
